dma_buf_fd(): fd_putfile() does not belong here

PR kern/53834 ok riastradh@